--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/native-stack": "^7.6.2",
     "axios": "^1.13.2",
     "babel-preset-expo": "~54.0.10",
-    "expo": "~54.0.23",
+    "expo": "~54.0.33",
     "expo-auth-session": "~7.0.10",
     "expo-av": "~16.0.8",
     "expo-crypto": "~15.0.8",
@@ -30,10 +30,11 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-pager-view": "6.9.1",
-    "react-native-reanimated": "^3.16.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-tab-view": "^4.2.2"
+    "react-native-tab-view": "^4.2.2",
+    "react-native-worklets": "^0.5.1"
   },
   "devDependencies": {
     "@testing-library/react-native": "^13.3.3",
